--- a/templates/base.html
+++ b/templates/base.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>{% block title %}Virtual Pantry{% endblock %}</title>
     <meta name="description" content="Virtual Pantry Front-end">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aboreto&amp;display=swap">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Drag--Drop-Upload-Form.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Drag-Drop-File-Input-Upload.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Grid-and-List-view-V10-style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Grid-and-List-view-V10.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Lightbox-Gallery-baguetteBox.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Login-Form-Basic-icons.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Drag--Drop-Upload-Form.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Drag-Drop-File-Input-Upload.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Grid-and-List-view-V10-style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Grid-and-List-view-V10.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Lightbox-Gallery-baguetteBox.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/Login-Form-Basic-icons.css') }}">
 </head>
 <body>
     <header>
-        <div data-bss-parallax-bg="true" style="height: 600px; background-image: url('{{ url_for('static', filename='assets/img/table-full-fruits-nuts-with-wooden-background_777078-2918.avif') }}'); background-position: center; background-size: cover;">
+        <div data-bss-parallax-bg="true" style="height: 600px; background-image: url(static/assets/img/table-full-fruits-nuts-with-wooden-background_777078-2918.avif); background-position: center; background-size: cover;">
             <nav class="navbar navbar-expand-md text-end" style="background: rgba(17,17,17,0.42);">
                 <div class="container-fluid">
                     <a class="navbar-brand fs-2" href="#" style="color: var(--bs-light-bg-subtle);font-family: Aboreto, serif;">Group 8</a>
@@ -31,43 +31,42 @@
                     <div class="collapse navbar-collapse text-end" id="navcol-1">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
+                                <a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" href="{{ url_for('index') }}" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">Home</a>
+                            </li> 
+                            <li class="nav-item">
                                 <a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" href="{{ url_for('login') }}" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" href="{{ url_for('scan') }}" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">SCAN</a>
+                                <a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" href="{{ url_for('scan') }}" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">Scan</a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" href="{{ url_for('pantry') }}" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">Pantry</a>
-                            </li>
+                            </li>                        
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1 class="fw-bolder text-center" style="font-family: Aboreto, serif;font-size: 98px;">
-                            {% block title %}{% endblock %}
-                        </h1>
-                    </div>
-                </div>
-                <div class="row" style="margin-bottom: 12px;">
-                    <div class="col">
-                        <p>
-                            {% block content %}{% endblock %}
-                        </p>
-                    </div>
-                </div>
-            </div>
         </div>
     </header>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bs-init.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/grayscale.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced-drop.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/Grid-and-List-view-V10-script.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/Lightbox-Gallery-baguetteBox.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/Lightbox-Gallery.js') }}"></script>
+    <main class="container my-5"
+        <div class="text-center my-4">
+            <h1 class="fw-bolder" style="font-family: Aboreto, serif;">
+                {% block page_title %}{% endblock %}
+            </h1>
+        </div>
+        <div class="content-section">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </main>
+
+    <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/bs-init.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/grayscale.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced-drop.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/Grid-and-List-view-V10-script.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/Lightbox-Gallery-baguetteBox.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/Lightbox-Gallery.js') }}"></script>
 </body>
 
 </html>
