--- a/templates/index.html
+++ b/templates/index.html
@@ -1,56 +1,48 @@
-<!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Virtual_Pantry</title>
-    <meta name="description" content="Virtual Pantry Front-end">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aboreto&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/Drag--Drop-Upload-Form.css">
-    <link rel="stylesheet" href="assets/css/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.css">
-    <link rel="stylesheet" href="assets/css/Drag-Drop-File-Input-Upload.css">
-    <link rel="stylesheet" href="assets/css/Grid-and-List-view-V10-style.css">
-    <link rel="stylesheet" href="assets/css/Grid-and-List-view-V10.css">
-    <link rel="stylesheet" href="assets/css/Lightbox-Gallery-baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Basic-icons.css">
-</head>
+{% block title %}Home - Virtual Pantry{% endblock %}
 
-<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77" style="--bs-primary: #E07A77;--bs-primary-rgb: 224,122,119;--bs-secondary: #F5E3C3;--bs-secondary-rgb: 245,227,195;--bs-success: #6B8E23;--bs-success-rgb: 107,142,35;--bs-info: #F5E3C3;--bs-info-rgb: 245,227,195;--bs-warning: #F5A623;--bs-warning-rgb: 245,166,35;--bs-danger: #C34A4A;--bs-danger-rgb: 195,74,74;--bs-light: #F5E3C3;--bs-light-rgb: 245,227,195;--bs-dark: #2B2B2B;--bs-dark-rgb: 43,43,43;--bs-body-color: #FFFFFF;--bs-body-bg: var(--bs-dark);">
-    <header>
-        <div data-bss-parallax-bg="true" style="height: 600px;background-image: url(&quot;assets/img/table-full-fruits-nuts-with-wooden-background_777078-2918.avif&quot;);background-position: center;background-size: cover;">
-            <nav class="navbar navbar-expand-md text-end" style="background: rgba(17,17,17,0.42);">
-                <div class="container-fluid"><a class="navbar-brand fs-2" href="#" style="color: var(--bs-light-bg-subtle);font-family: Aboreto, serif;">Group 8</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse text-end" id="navcol-1">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">Login</a></li>
-                            <li class="nav-item"><a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">SCAN</a></li>
-                            <li class="nav-item"><a class="btn btn-primary fs-5 fw-semibold border rounded-circle border-3" role="button" style="margin-left: 20px;background: rgba(66,220,163,0);color: var(--bs-white);border-style: dashed;border-color: var(--bs-white);font-family: Aboreto, serif;">Pantry</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <div class="container d-lg-flex align-items-lg-center" style="height: 530px;">
-                <div class="row" style="height: 366px;">
-                    <div class="col-md-6 col-lg-6" style="height: 400px;">
-                        <h1 class="display-1 fw-bolder lh-sm text-center" style="height: 230px;font-family: Aboreto, serif;font-size: 90px;--bs-primary: #E07A77;--bs-primary-rgb: 224,122,119;--bs-danger: #C34A4A;--bs-danger-rgb: 195,74,74;--bs-dark: #2B2B2B;--bs-dark-rgb: 43,43,43;--bs-body-color: #FFFFFF;--bs-secondary: #F5E3C3;--bs-secondary-rgb: 245,227,195;--bs-success: #6B8E23;--bs-success-rgb: 107,142,35;--bs-info: #F5E3C3;--bs-info-rgb: 245,227,195;--bs-warning: #F5A623;--bs-warning-rgb: 245,166,35;--bs-light: #F5E3C3;--bs-light-rgb: 245,227,195;">VIrtual Pantry&nbsp;</h1>
-                        <p style="font-family: Aboreto, serif;text-align: center;font-size: 20px;">Limiting Food Waste Since 2024</p>
-                    </div>
-                    <div class="col-md-6 d-lg-flex justify-content-lg-center align-items-lg-center" style="height: 400px;"><a class="btn btn-primary fw-semibold text-center border rounded-circle border-5 d-lg-flex justify-content-lg-center align-items-lg-center" role="button" style="height: 180px;width: 300px;text-align: center;color: var(--bs-light-bg-subtle);font-family: Aboreto, serif;font-size: 40px;background: rgba(66,220,163,0);">Get&nbsp; started</a></div>
-                </div>
-            </div>
+{% block page_title %}
+Virtual Pantry
+{% endblock %}
+
+{% block content %}
+<div class="container d-lg-flex align-items-lg-center" style="height: 530px;">
+    <div class="row" style="height: 366px;">
+        <div class="col-md-6 col-lg-6" style="height: 400px;">
+            <h1 class="display-1 fw-bolder lh-sm text-center" 
+                style="height: 230px;font-family: Aboreto, serif;
+                    font-size: 90px;--bs-primary: #E07A77;
+                    --bs-primary-rgb: 224,122,119;
+                    --bs-danger: #C34A4A;--bs-danger-rgb: 195,74,74;
+                    --bs-dark: #2B2B2B;
+                    --bs-dark-rgb: 43,43,43;
+                    --bs-body-color: #FFFFFF;
+                    --bs-secondary: #F5E3C3;
+                    --bs-secondary-rgb: 245,227,195;
+                    --bs-success: #6B8E23;
+                    --bs-success-rgb: 107,142,35;
+                    --bs-info: #F5E3C3;
+                    --bs-info-rgb: 245,227,195;
+                    --bs-warning: #F5A623;
+                    --bs-warning-rgb: 245,166,35;
+                    --bs-light: #F5E3C3;
+                    --bs-light-rgb: 245,227,195;">
+                    Virtual Pantry
+            </h1>
+            <p style="font-family: Aboreto, serif;text-align: center;font-size: 20px;">Limiting Food Waste Since 2024</p>
         </div>
-    </header>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="assets/js/grayscale.js"></script>
-    <script src="assets/js/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced-drop.js"></script>
-    <script src="assets/js/Grid-and-List-view-V10-script.js"></script>
-    <script src="assets/js/Lightbox-Gallery-baguetteBox.min.js"></script>
-    <script src="assets/js/Lightbox-Gallery.js"></script>
-</body>
-
-</html>
+        <div class="col-md-6 d-lg-flex justify-content-lg-center align-items-lg-center" style="height: 400px;">
+            <a class="btn btn-primary fw-semibold text-center border rounded-circle border-5 d-lg-flex justify-content-lg-center align-items-lg-center" 
+                role="button" 
+                style="height: 180px;
+                    width: 300px;
+                    text-align: center;
+                    color: var(--bs-light-bg-subtle);
+                    font-family: Aboreto, serif;
+                    font-size: 40px;background: rgba(66,220,163,0);
+                    " href="{{ url_for('login') }}">Get&nbsp; Started</a>
+        </div>
+    </div>
+</div>
+{% endblock %}
