--- a/templates/pantry.html
+++ b/templates/pantry.html
@@ -2,13 +2,11 @@
 
 {% block title %}Pantry - Virtual Pantry{% endblock %}
 
-{% block page_title %}
-Pantry
-{% endblock %}
-
 {% block content %}
 <main>
     <div class="container mt-5">
+        <div class="col-md-8 col-xl-6 text-center mx-auto">
+            <h2 class="fw-bolder" style="font-family: Aboreto, serif; font-size: 70px; margin-bottom: 15px;">Pantry</h2>
         <div class="row" id="pantry-grid">
             <!-- Items will be dynamically inserted here -->
         </div>
