--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                     color: var(--bs-light-bg-subtle);
                     font-family: Aboreto, serif;
                     font-size: 40px;background: rgba(66,220,163,0);
-                    " href="{{ url_for('login') }}">Get&nbsp; Started</a>
+                    " href="{{ url_for('scan') }}">Get&nbsp; Started</a>
         </div>
     </div>
 </div>
